--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://hujiaweibujidao.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Hujiawei Bujidao
+subtitle: Love coding, travelling and MY QUEEN.
+author: hujiawei
 simple_search: http://google.com/search
 description:
 
@@ -68,9 +68,9 @@ github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
 
-# Twitter
+# Twitter -- button false
 twitter_user:
-twitter_tweet_button: true
+twitter_tweet_button: false
 
 # Google +1
 google_plus_one: false
