--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Hujiawei Bujidao
 subtitle: Love coding, travelling and MY QUEEN.
 author: hujiawei
 simple_search: http://google.com/search
-description:
+description: hujiawei bujidao
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -52,13 +52,14 @@ titlecase: true       # Converts page and post titles to titlecase
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
 #default_asides: [asides/recent_posts.html,custom/asides/sinaweibo.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
-default_asides: [custom/asides/about.html, custom/asides/category_list.html ,asides/recent_posts.html, custom/asides/websiteslink.html]
+#default_asides: [custom/asides/about.html, custom/asides/category_list.html ,asides/recent_posts.html, custom/asides/websiteslink.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
-# blog_index_asides:
-# post_asides:
-# page_asides:
+blog_index_asides: [custom/asides/about.html, custom/asides/category_list.html ,asides/recent_posts.html, custom/asides/websiteslink.html]
+post_asides: [custom/asides/about.html, custom/asides/category_list.html ,asides/recent_posts.html, custom/asides/websiteslink.html]
+page_asides: [custom/asides/about.html, custom/asides/category_list.html ,asides/recent_posts.html, custom/asides/websiteslink.html]
+
 
 # ----------------------- #
 #   3rd Party Settings    #
