--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://hujiaweibujidao.github.io
 title: Hujiawei Bujidao
-subtitle: Love coding, travelling and MY QUEEN.
+subtitle: Love coding, travelling, family and MY QUEEN.
 author: hujiawei
 simple_search: http://google.com/search
 description: hujiawei bujidao
