--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://hujiaweibujidao.github.io
 title: Hujiawei Bujidao
-subtitle: I will always be your savior!
+subtitle: I will always be your savior! A secret makes a man man!
 #Love coding, travelling, family and MY QUEEN.
 author: hujiawei
 simple_search: http://google.com/search
