commit make all to original
commit make all to original

--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,7 @@ code_dir: downloads/code
 category_dir: blog/categories
 tag_dir: blog/tags
 markdown: rdiscount
+#kramdown go wrong when changing it
 rdiscount:
   extensions:
     - autolink
